--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,9 +26,7 @@ letter-spacing: 0.02em;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;;
 }
 /*  -- ФОРМА ПОШУКУ --- */
-/* .form-list {
 
-} */
 
 .search-form {
     position: absolute;
@@ -67,10 +65,6 @@ letter-spacing: 0.02em;
   }
     
 
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px; */
-
-
-
 .search-btn {
     position: absolute;
     top: 10px;
@@ -91,32 +85,41 @@ letter-spacing: 0.02em;
 /* ----------- */
 
 .gallery {
-    display: flex;
+     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    flex-direction: column;
-    gap: 10px;
+    gap: 20px; 
+    /* max-width: 1280px; */
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    flex-basis: calc((100% - 30px) / 4);
+
 }
+
+
 /* -- КАРТКА ЗОБРАЖЕНЬ -- */
 
-.photo-card-link {
-    width: 100%;
-    flex-basis: calc((100% - 60px) / 4);
-    
-}
-
+/*  -div- */
 .photo-card {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    padding: 0;
     width: 100%;
+    flex-basis: calc((100% - 60px) / 4);
+    gap: 10px;
+    
+    padding: 0;
+    margin: 0;
+    margin-bottom: 10px;
+    flex-basis: calc((100% - 30px) / 4);
+    max-width: 300px;
     height: 100%;
-    justify-content: space-evenly;
+    justify-content: space-evenly;  
 
-
-   
-
-
-/* flex-basis:  calc((100%-30px)/4); */
+/* width:  calc((100%-30px)/4); */
 
 
 border-radius: 4px;
@@ -130,9 +133,17 @@ transition: transform 250ms linear;
 
 /* -- зображення в картці -- */
 
+.photo-card-link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 300px;
+    justify-content: space-evenly;
+    
+ } 
 
 .photo {
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -165,7 +176,10 @@ transition: transform 250ms linear;
 /*  --  КНОПКА -- */
 
 .load-more-btn {
-    /* position:; */
+    position:relative;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     top:50%;
     background-color:var(--favcolor);
     color: #fff;
@@ -174,6 +188,7 @@ transition: transform 250ms linear;
     padding:15px;
     min-height:30px; 
     min-width: 120px;
+    
 }
 
 .load-more-btn:hover,
@@ -186,5 +201,5 @@ transition: transform 250ms linear;
 }
 .load-more-btn:active {
     background-color: #ed8dec
-    /* color: #959ff9; */
+   
 }
